--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,11 +1,1 @@
-/**
- * These are the variables used throughout the application. This is where 
- * overwrites that are not specific to components should be maintained.
- */
-
-/**
- * Typography-related.
- */
-
-@sansFontFamily: 'Roboto', sans-serif;
-
+@background-color: #d9d9d9;
