--- a/src/app/suenth/suenth.less
+++ b/src/app/suenth/suenth.less
@@ -1,3 +1,41 @@
-h1 {
+.keyboard {
+  width        : 415px;
+  padding      : 10px;
+  border       : 1px solid #777;
+  border-radius: 5px;
+  margin       : 30px auto;
   
+  .key {
+    min-height   : 50px;
+    width        : 30px;
+    border-left  : 0;
+    border-top   : 0;
+    border-right : 1px solid #777;
+    border-bottom: 3px solid #777;
+    font-size    : 10px;
+    
+    &:hover,
+    &:active,
+    &:focus {
+      outline: none;
+    }
+
+    &.black {
+      color           : #fff;
+      background-color: #444;
+      
+      &.active {
+        background-color: #000;
+      }
+    }
+
+    &.white {
+      color           : #000;
+      background-color: #fff;
+      
+      &.active {
+        background-color: #ddd;
+      }
+    }
+  }
 }
